src/styles/rpg-styles.css
* {
  -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
          box-sizing: border-box;
}

.widget {
    /*border: 1px solid black;*/
    overflow: visible;
}

.item {
    background-color: #c0392b;
}

.npc {
    background-color: #2980b9;
}

.encounter {
    background-color: #27ae60;
}

.locale {
    background-color: #f1c40f;
}

.react-grid-item.react-grid-placeholder {
    background: #222222;
}

.asset-widget-icon {
    float: left;
    margin: 0px;
    position: relative;
}

.asset-widget-normal-header {
    display: flex;
    flex-direction: column;
}

.asset-widget-full {
    display: flex;
    flex-direction: column;
}

.asset-widget-full-header {

}

.asset-widget-name {
    position: relative;
    margin: 2px;
    font-size: 10pt;
}

.asset-widget-description {
    position: relative;
    margin: 0px 2px 2px 2px;
    font-size: 9pt;
}

.dice-widget {
    background: #22FFFF;
}

.dice-widget-roll-button {
    border: solid black 1px;
    width: 30px;
    height: 30px;
    float: left;
    margin: 5px;
    text-align: center;
/*    vertical-align: middle;*/
    border-radius: 50%;
}

.dice-widget-roll-text {
    display: inline-block;
    vertical-align: middle;
}

.dice-widget-reset-button {
    float: left;
}

.dice-widget-sum-display {
    clear: left;
}

